tests/checker/ok/multiline_union.can
Ord = EqualBeyondAnyShadowOfADoubtWhatsoever
  + GreaterByAConsiderableAndUndeniableMargin
  + LessByAnEntirelyUnmistakableAmount

Unit => Program {
    EqualBeyondAnyShadowOfADoubtWhatsoever()
    "multi-line union defined" -> Print
}
