tests/checker/fail/duplicate_main.can
Unit => Program {
    "first".print()
}

Unit => Program {
    "second".print()
}
